k8s/06-grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cgp-grafana
  namespace: cgp-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cgp-grafana
  template:
    metadata:
      labels:
        app: cgp-grafana
    spec:
      securityContext:
        runAsUser: 0
      containers:
      - name: grafana
        image: grafana/grafana
        resources:
          limits:
            memory: "1Gi"
            cpu: "1000m"
          requests:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: grafana-data
          mountPath: host-data-grafana
      volumes:
      - name: grafana-data
        persistentVolumeClaim:
          claimName: grafana-data
---
apiVersion: v1
kind: Service
metadata:
  name: cgp-grafana
  namespace: cgp-system
spec:
  selector:
    app: cgp-grafana
  ports:
  - port: 3000
    targetPort: 3000
