k8s/07-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cgp-worker-1
  namespace: cgp-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cgp-worker-1
  template:
    metadata:
      labels:
        app: cgp-worker-1
    spec:
      containers:
      - name: worker
        image: cgp-nt-again:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 2727
        resources:
          limits:
            memory: "1Gi"
            cpu: "1000m"
          requests:
            memory: "512Mi"
            cpu: "500m"
        command: ["sh", "scripts/run_listener.sh"]
        volumeMounts:
        - name: condorgp-volume
          mountPath: /condorgp
      volumes:
      - name: condorgp-volume
        hostPath:
          path: /home/hsth/code/hughharford/condorgp  # Updated this path
      - name: ignore-condorgp-volume-venv
        hostPath:
          path: /home/hsth/code/hughharford/condorgp/.venv
---
apiVersion: v1
kind: Service
metadata:
  name: cgp-worker-1
  namespace: cgp-system
spec:
  selector:
    app: cgp-worker-1
  ports:
  - port: 2727
    targetPort: 2727
