k8s/09-cgpstar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cgpstar
  namespace: cgp-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cgpstar
  template:
    metadata:
      labels:
        app: cgpstar
    spec:
      containers:
      - name: star
        image: cgpstar:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 2727
        resources:
          limits:
            memory: "1Gi"
            cpu: "1000m"
          requests:
            memory: "512Mi"
            cpu: "500m"
        command: ["sh", "scripts/install_cgp_star.sh"]
        volumeMounts:
        - name: condorgp-volume
          mountPath: /condorgp
      volumes:
      - name: condorgp-volume
        hostPath:
          path: /home/hsth/code/hughharford/condorgp  # Updated this path
---
apiVersion: v1
kind: Service
metadata:
  name: cgpstar
  namespace: cgp-system
spec:
  type: NodePort
  selector:
    app: cgpstar
  ports:
  - port: 2727
    targetPort: 2727
