k8s/10-dev-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev
  namespace: cgp-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev
  template:
    metadata:
      labels:
        app: dev
    spec:
      containers:
      - name: dev
        image: dev-01-ppg:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 1111
        resources:
          limits:
            memory: "1.5Gi"
            cpu: "2000m"
          requests:
            memory: "1024Mi"
            cpu: "1000m"
        command: ["sh", "scripts/service_run_api.sh"]
        volumeMounts:
        - name: condorgp-volume
          mountPath: /condorgp
      volumes:
      - name: condorgp-volume
        hostPath:
          path: /home/hsth/code/hughharford/condorgp  # Updated this path
---
apiVersion: v1
kind: Service
metadata:
  name: dev
  namespace: cgp-system
spec:
  type: NodePort
  selector:
    app: dev
  ports:
  - port: 1111
    targetPort: 1111
